--- a/zadanie/css/all.css
+++ b/zadanie/css/all.css
@@ -2,12 +2,19 @@ html, body {
   height: 100%;
 }
 
-ul {
-  height: 100%;
+.characters {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
 }
+
+ul {
+  display: flex;
+  padding: 0;
+}
+
 li {
   list-style-type: none;
 }
