--- a/zadanie/css/all.css
+++ b/zadanie/css/all.css
@@ -65,3 +65,38 @@ li {
   text-indent: 0;
   font-size: 20px;
 }
+
+button {
+  display: block;
+  position: relative;
+  height: 70px;
+  width: 355px;
+  margin: 0 auto;
+  border: 0;
+  border-right: 40px solid white;
+  background-color: black;
+  color: #fee33d;
+  font-size: 29px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 70px;
+}
+
+button:hover {
+  color: black;
+  background-color: #fee33d;
+}
+
+/* Button arrow */
+button:after {
+  content: "";
+  position: absolute;
+  right: -40px;
+  border-style: solid;
+  border-width: 35px 0 34px 40px;
+  border-color: transparent black;
+}
+
+button:hover:after {
+  border-color: transparent #fee33d;
+}
